typescript/checker/tests/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral2.ts.stderr
error: UndefinedSymbol {
    sym: Atom('Foo' type=inline),
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            7,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral2.ts:1:5
  |
1 | new Foo[1];
  |     ^^^

